# Proposal_bot

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Plan.md  QUICKSTART.md  README.md  SETUP.md  TESTING_PLAN.md  celery_beat.py  celery_worker.py  docker-compose.yml  env.template  langgraph.json  langsmith.json  main.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_system.py
.agent_memory/knowledge/test_category/: test_key.json
app/: __init__.py
app/agents/: __init__.py  brief_review_agent.py  email_agent.py  gtm_agent.py  knowledge_agent.py  notion_agent.py  planning_agent.py  powerpoint_agent.py
app/agents/templates/: clarification_request.html  validation_request.html
app/api/: main.py
app/core/: agent.py  celery_app.py  config.py  llm.py  logging.py  monitoring.py  redis_client.py  tasks.py  tools.py
app/database/: connection.py
app/knowledge/: __init__.py  kb.py
app/models/: __init__.py  base.py  documents.py  projects.py  resources.py  validations.py
app/services/: web_research.py
backend/: Dockerfile  config.py  init_db.py  main.py  requirements.txt
backend/alembic/: env.py
backend/api/: __init__.py  auth.py  capabilities.py  proposals.py  resources.py  rfp.py
backend/models/: __init__.py  database.py  orm.py  schemas.py
backend/services/: __init__.py  extraction_service.py  llm_service.py  pdf_service.py  prompts.py  proposal_service.py
backend/utils/: __init__.py  auth.py  file_storage.py
data/briefs/: example_brief_good_quality.json  example_brief_medium_quality.json  example_brief_poor_quality.json
data/google_sheets_templates/: pricing_template.csv  staff_profiles_template.csv  vendor_relationships_template.csv
proposal_bot/: __init__.py  audit.py  auth.py  memory.py  middleware.py  server.py
proposal_bot/agents/: __init__.py  background_memory_agent.py  brief_preparation_agent.py  proposal_agent.py
proposal_bot/config/: __init__.py  settings.py
proposal_bot/graphs/: __init__.py  proposal_workflow.py
proposal_bot/schemas/: __init__.py  brief.py  project.py  proposal.py  resource.py  validation.py
proposal_bot/services/: __init__.py  google_sheets.py  pricing_calculator.py  proposal_formatter.py
proposal_bot/tools/: __init__.py  email_tools.py  file_tools.py  knowledge_tools.py  planning_tools.py  resource_tools.py
tests/: test_integration.py
